--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase": "^8.1.1"
+    "firebase": "^8.1.1",
+    "firebase-admin": "^9.4.1",
+    "multer": "^1.4.2"
   }
 }
