--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "ws": "^7.4.0"
   }
 }
