--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "firebase": "^8.1.1",
     "firebase-admin": "^9.4.1",
+    "mongoose": "^5.10.15",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "ws": "^7.4.0"
   }
 }
