--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts build && (cd backend && nodemon server.js)",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
